# SerialKeyboardServer

./: CMakeLists.txt  Serial_Keyboard_Server_GUI.pro  Serial_Keyboard_Server_GUI.pro.user.3dd49a3  Serial_Keyboard_Server_GUI.pro.user.6e0cde1  Serial_keyboard_Server.pro  Serial_keyboard_Server.pro.user.68961df  Serial_keyboard_Server.pro.user.6e0cde1  console.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialportreader.cpp  serialreader.cpp  serialreader.h
